# vorbis-rs

./: .all-contributorsrc  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md
.cargo/: config.toml
.github/: renovate.json
.github/workflows/: ci.yml
scripts/: generate-bindings.sh
