[workspace]
members = ["packages/*"]
resolver = "2"

[workspace.package]
authors = ["Alejandro González <me@alegon.dev>"]
license = "BSD-3-Clause"
repository = "https://github.com/ComunidadAylas/vorbis-rs"
edition = "2021"
rust-version = "1.64.0"

[workspace.dependencies]
aotuv_lancer_vorbis_sys = { version = "0.1.4", path = "packages/aotuv_lancer_vorbis_sys" }
ogg_next_sys = { version = "0.1.3", path = "packages/ogg_next_sys" }

cc = "1.0.88"
bindgen = "0.69.4"

[profile.release]
# Add debug symbols on release mode to allow debugging upstream code.
# This does not affect library users
debug = true

[workspace.lints.clippy]
cargo = "warn"
pedantic = "warn"
