[workspace]
resolver = "3"
members = ["packages/*"]

[workspace.package]
authors = ["Alejandro González <me@alegon.dev>"]
license = "BSD-3-Clause"
repository = "https://github.com/ComunidadAylas/vorbis-rs"
edition = "2024"
rust-version = "1.87.0"

[workspace.dependencies]
aotuv_lancer_vorbis_sys = { path = "packages/aotuv_lancer_vorbis_sys", version = "0.1.5" }
bindgen = "0.72.1"
cc = "1.2.55"
errno = { version = "0.3.14", default-features = false }
getrandom = { version = "0.4.1", features = ["std"] }
ogg_next_sys = { path = "packages/ogg_next_sys", version = "0.1.4" }
thiserror = "2.0.18"
tinyvec = { version = "1.10.0", default-features = false, features = [
  "alloc",
  "rustc_1_57",
] }

[workspace.lints.clippy]
cargo = "warn"
pedantic = "warn"

[profile.release]
# Add debug symbols on release mode to allow debugging upstream code.
# This does not affect library users
debug = true

